fixed dropdown spacing

--- a/client/src/pages/ViewAppointments.css
+++ b/client/src/pages/ViewAppointments.css
@@ -30,14 +30,16 @@
 .show-appt-dropdowns {
     display: flex;
     flex-direction: row;
-    width: 50%;
+    align-items: center;
+    /* background-color: red; */
+    /* width: 100%; */
 }
 
 .appointment-filter-checkboxes {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    /* justify-content: space-between; */
+    margin-bottom: 2%;
 }
 
 .top-container h1 {
@@ -63,7 +65,6 @@
 .h3{
     font-size: 10px;
 }
-
 
 .form-check-input-items {
     border: #000000;
@@ -108,8 +109,6 @@
 .filters {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height:70vh;
     align-items: center;
     overflow-y: scroll;
 }
@@ -129,26 +128,26 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    padding-bottom: 2vh;
+    padding-bottom: 4vh;
+    width: 100%;
+    background-color: green;
 }
 
 .appt-by-day {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-bottom: 2vh;
-    height: '6vh';
+    height: 6vh;
+    margin-bottom: 2%;
 }
 
 .appt-by-time {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-bottom: 2vh;
-    height: '6vh';
+    height: 6vh;
+    margin-bottom: 2%;
 }
-
-
 
 p#filterControlLabel {
     color: #4C4C4C;
@@ -158,24 +157,21 @@ p#filterControlLabel {
 }
 
 .appt-custom-dropdown {
-    padding-top: 1px;
-    width: 25vw;
+    width: 20vw;
     border-color: #ACB9AC;
-    margin-right: -4vw;
+    border-radius: 25px;
 }
 
 .appt-custom-dropdown-2 {
-    padding-top: 1px;
-    width: 25vw;
+    width: 20vw;
     border-color: #ACB9AC;
-    margin-right: -4vw;
+    margin-left: 2vw;
 }
 
 .appt-card-display {
-    width: 35vw;
+    width: 50vw;
     height: 100%;
     overflow-y: scroll;
-    /* background-color: pink; */
 }
 
 .filterReset{
@@ -199,7 +195,6 @@ p#filterControlLabel {
 .resetFilters{
     font-size: 16px;
     background-color: #fff;
-    /* color: #A71E47; */
     align-items: right;
     padding-top: 1vh;
     font-family: 'Inter', sans-serif;
@@ -306,7 +301,6 @@ p#filterControlLabel {
 
 .filterItemDisplay {
     width: 55vw;
-    /* padding: 10px; */
     align-items: left;
     overflow-y: scroll;
     border-left: 1px solid #B8B8B8;
@@ -317,12 +311,10 @@ p#filterControlLabel {
 }
 
 .appointment-form-check-label {
-    /* padding-left: 50%; */
     display: flex;
     width: 140%;
     color: #264425;
     align-items: right;
-    padding-top: 0%;
 }
 
 .appointment-filter-checkboxes {
@@ -330,13 +322,12 @@ p#filterControlLabel {
     flex-direction: column;
     align-items: center;  
     margin-top: 4%; 
-    margin-bottom: 1%;
+    margin-bottom: 2%;
+    margin-right: 1%;
 }
 
 
 input.appointment-view-input {
-    /* display:flex; */
-    /* flex-direction: row; */
     border-radius: 4px 4px 4px 4px;
     font-size: 2vh;
     font-family: "Montserrat";
@@ -357,8 +348,6 @@ input[type="checkbox"] {
 
 input[type="checkbox"]:checked {
     border: 1.5px solid #B8B8B8;
-    /* background-color: solid #264425;  */
     accent-color: #264425;
     box-shadow: "transparent";
-    /* box-shadow: inset 0 0 0 2.5px white, inset 0 0 0 8px #264425; */
 }
